phpipam/kustomize/deployment-phpipam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpipam
  name: deployment-phpipam
  namespace: ns-phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpipam
    spec:
      containers:
      - env:
        - name: MYSQL_ENV_MYSQL_USER
          value: root
        - name: MYSQL_ENV_MYSQL_ROOT_PASSWORD
          value: memora
        - name: MYSQL_ENV_MYSQL_HOST
          value: svc-mysql-phpipam
        image: pierrecdn/phpipam
        imagePullPolicy: Always
        name: container-phpipam
        ports:
        - containerPort: 80
          name: port-phpipam
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
