phpipam/kustomize/svc-mysql-phpipam.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql-phpipam
  namespace: ns-phpipam
spec:
  ports:
  - name: port-mysql-phpipam
    nodePort: 30002
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-phpipam
  sessionAffinity: None
  type: NodePort
