phpipam/kustomize/svc-phpipam.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-phpipam
  namespace: ns-phpipam
spec:
  ports:
  - name: port-phpipam
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpipam
  sessionAffinity: None
  type: NodePort
